--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/misc.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
@@ -22,6 +23,7 @@
 # Gradle:
 .idea/gradle.xml
 .idea/libraries
+.gradle
 
 ## File-based project format:
 *.iws
