--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,25 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
-    <application android:allowBackup="true"
+    <application android:name=".Application"
+                 android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:icon="@mipmap/ic_launcher"
+                 android:icon="@drawable/app_icon"
                  android:theme="@style/AppTheme">
 
         <service android:name=".util.GeofenceTransitionsIntentService222"/>
 
         <activity android:name=".view.MainActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".view.LoginActivity"
                   android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <activity android:name=".view.ProjectActivity"
