--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
 
         </activity>
 
+        <activity android:name=".view.RegisterActivity"
+                  android:screenOrientation="portrait"/>
+
         <activity android:name=".view.ProjectActivity"
                   android:screenOrientation="portrait"/>
 
