--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        renderscriptTargetApi 23
+        renderscriptSupportModeEnabled true
     }
 
     compileOptions {
@@ -46,4 +49,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.0.1'
+    compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
