--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
           package="no.ntnu.mikaelr.delta">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application android:name=".Application"
                  android:allowBackup="true"
@@ -46,6 +49,9 @@
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".view.PostCommentActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".view.ImageCropperActivity"
                   android:screenOrientation="portrait"/>
 
         <meta-data
