Added new map marker icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.theartofdev.edmodo:android-image-cropper:2.0.1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.maps.android:android-maps-utils:0.4'
 }
