--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -12,7 +13,7 @@
                  android:icon="@drawable/app_icon"
                  android:theme="@style/AppTheme">
 
-        <service android:name=".util.GeofenceTransitionsIntentService222"/>
+        <service android:name=".util.LocationService" />
 
         <activity android:name=".view.MainActivity"
                   android:screenOrientation="portrait"/>
@@ -34,7 +35,8 @@
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".view.MissionActivity"
-                  android:screenOrientation="portrait"/>
+                  android:screenOrientation="portrait"
+                  android:launchMode="singleTask"/>
 
         <activity android:name=".view.TaskActivity"
                   android:screenOrientation="portrait"/>
