--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity android:name=".view.ImageCropperActivity"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".view.ProfileActivity"
+                  android:screenOrientation="portrait"/>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBr0_DF-1WBVia68xXvTopREuDpHmYtXlk"/>
